infra/overrides/argocd-repo-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-repo-server
  namespace: argocd
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argocd-repo-server
  ports:
    - name: server
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: metrics
      port: 8084
      targetPort: 8084
      protocol: TCP
